snapshot-tests/tests/snapshots/parser__bad_floats__no_digit_before_dot_pos.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[invalid-integer]: 
  ┌─ no_digit_before_dot_pos:1:5
  │
1 │ a = +.7
  │     ^ invalid integer: expected digit after sign
